# agribenchmark_backend

./: .gitignore  Makefile  bla.py  create_tables.py  create_update_tables.py  hello.py  main.py  models.py  pyproject.toml  requirements.txt
schema/: agribenchmark_schema.sql
src/: crud_router_generator.py  database.py  models.py
src/results/: export.py
