[project]
name = "agribenchmark-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "markitdown>=0.0.1a3",
    "omymodels>=0.17.0",
    "polars>=1.21.0",
    "psycopg2-binary>=2.9.10",
    "simple-ddl-parser>=1.7.1",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
]

[tool.uv.sources]
omymodels = { git = "https://github.com/xnuinside/omymodels.git", rev = "refs/pull/69/head" }
